                                                              -*- org -*-
#+TITLE: Guix NEWS – history of user-visible changes
#+STARTUP: content hidestars

Copyright © 2013-2022 Ludovic Courtès <ludo@gnu.org>
Copyright © 2016, 2017, 2018 Ricardo Wurmus <rekado@elephly.net>
Copyright © 2021, 2022 Maxim Cournoyer <maxim.cournoyer@gmail.com>
Copyright © 2022 Mathieu Othacehe <othacehe@gnu.org>

  Copying and distribution of this file, with or without modification,
  are permitted in any medium without royalty provided the copyright
  notice and this notice are preserved.

Please send Guix bug reports to bug-guix@gnu.org.

* Changes in 1.5.0 (since 1.4.0)
** Package management
*** New ‘rpm’ format for the ‘guix pack’ command
* Changes in 1.4.0 (since 1.3.0)
** Package management
*** New ‘guix home’ command, for home environment management
*** New ‘guix shell’ command, the successor to ‘guix environment’
*** New ‘guix system edit’ command, to edit services
*** New ‘deb’ format for the ‘guix pack’ command
*** New ‘guix import minetest’ command, to import Minetest extensions
*** New ‘guix import elm’ command, to import Elm packages
*** New ‘guix import egg’ command, to import CHICKEN egg packages
*** New ‘guix import hexpm’ command, to import Erlang and Elixir packages
*** New 'guix style' command, to auto-format package definitions
*** ‘guix import texlive’ rewritten to use the TLPDB as its source
*** ‘guix import elpa’ now supports the non-GNU ELPA repository
*** ‘guix import pypi’ can now import a specific version
*** ‘guix import cran’ can now import a specific version
*** New updater (see ‘guix refresh’): ‘generic-git’
*** ‘guix graph’ has a new ‘--max-depth’ option
*** ‘guix deploy’ has a new ‘--execute’ option
*** ‘guix shell’ has a new ‘--emulate-fhs’ option
*** ‘guix shell’ has a new ‘--symlink’ option
*** ‘--with-commit’ option now accepts strings returned by ‘git describe’
*** ‘--with-source’ option now applied recursively