@@ -4,7 +4,7 @@
 
 Copyright © 2013-2022 Ludovic Courtès <ludo@gnu.org>
 Copyright © 2016, 2017, 2018 Ricardo Wurmus <rekado@elephly.net>
-Copyright © 2021, 2022 Maxim Cournoyer <maxim.cournoyer@gmail.com>
+Copyright © 2021, 2022, 2024 Maxim Cournoyer <maxim.cournoyer@gmail.com>
 Copyright © 2022 Mathieu Othacehe <othacehe@gnu.org>
 
   Copying and distribution of this file, with or without modification,
@@ -16,6 +16,8 @@ Please send Guix bug reports to bug-guix@gnu.org.
 * Changes in 1.5.0 (since 1.4.0)
 ** Package management
 *** New ‘rpm’ format for the ‘guix pack’ command
+** Distribution
+*** ‘nss-certs’ is now included in ‘%base-packages’
 * Changes in 1.4.0 (since 1.3.0)
 ** Package management
 *** New ‘guix home’ command, for home environment management
